Changes
=======

1.0a2 (2023-02-27)
------------------

- The expression parser has been fixed so that functions with underscores and
  numbers in their names such as shapely.force_2d can be used (#20).

1.0a1 (2023-02-22)
------------------

This is the first pre-release and is almost feature complete.